maze.lessons.maze.island.IslandMaze.scala.error
Escaper:23: error: Unit does not take parameters
    right()()
           ^Escaper:26: error: Unit does not take parameters
  right()()
         ^